k8s-cluster-configuration/applications/a2w-trials/base/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: a2w-trials-api-service
  namespace: a2w-trials
spec:
  selector:
    app: a2w-trials-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8420
