k8s-cluster-configuration/applications/a2w-trials/base/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: a2w-trials-web-service
  namespace: a2w-trials
spec:
  selector:
    app: a2w-trials-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
